<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Android Template</string>
	<string name="main_activity">MainActivity</string>
	<string name="secondary_activity">SecondaryActivity</string>
	<string name="sample_preference_activity">SamplePreferenceActivity</string>
	
	<!-- Main Screen -->
	<string name="button_test">Click Me!</string>
	<string name="button_thanks">Thank You.</string>

	<!-- Info Dialog -->
	<string name="info_dialog_author">Author: Michael Scheer</string>
	<string name="info_dialog_dev_text">This application is under active development.
		Please report any suggestions, errors and improvements. Thanks!
	</string>
	<string name="info_dialog_terms_text">This demo app is developed
		with great care. However, errors cannot be excluded and I take no
		liability for the usage of my app.
		Especially I take no liability for any damage, losses and
		drawbacks related to the usage of my app.</string>
		
	<!-- Preferences -->
	<string name="pref_category_one">Preference Category 1</string>
	<string name="pref_category_two">Preference Category 2</string>
	<string name="pref_category_three">Preference Category 3</string>
	<string name="pref_checkbox_title">Title</string>
	<string name="pref_checkbox_summary">Summary</string>
	<string name="pref_list_title">Title</string>
	<string name="pref_list_summary">Summary</string>
	<string name="pref_text_title">Title</string>
	<string name="pref_text_summary">Summary</string>
</resources>
